--- a/.github/workflows/build-SUEWS.yml
+++ b/.github/workflows/build-SUEWS.yml
@@ -150,14 +150,18 @@ jobs:
         # - name: Setup upterm session
         #   uses: lhotari/action-upterm@v1
 
+        - name: Install cibuildwheel
+          run: python -m pip install cibuildwheel==2.9.0
+
         - name: Build wheels
-          uses: pypa/cibuildwheel@v2.9.0
-          env:
-            SETUPTOOLS_ENABLE_FEATURES: legacy-editable
-          with:
-            package-dir: .
-            output-dir: wheelhouse
-            config-file: ./supy-driver/pyproject.toml
+          run: python -m cibuildwheel --output-dir wheelhouse --config-file ./supy-driver/pyproject.toml
+          # uses: pypa/cibuildwheel@v2.9.0
+          # env:
+          #   SETUPTOOLS_ENABLE_FEATURES: legacy-editable
+          # with:
+          #   package-dir: .
+          #   output-dir: wheelhouse
+          #   config-file: ./supy-driver/pyproject.toml
 
         - uses: actions/upload-artifact@v3
           with:
