--- a/.github/workflows/build-SUEWS.yml
+++ b/.github/workflows/build-SUEWS.yml
@@ -151,7 +151,7 @@ jobs:
         #   uses: lhotari/action-upterm@v1
 
         - name: Build wheels
-          run: pipx run cibuildwheel==2.9.0 --output-dir wheelhouse --config-file ./supy-driver/pyproject.toml
+          run: pipx run cibuildwheel==2.9.0 --output-dir wheelhouse --config-file ./supy-driver/pyproject.toml ./supy-driver
 
         # - name: Install cibuildwheel
         #   run: python -m pip install cibuildwheel==2.9.0
