--- a/supy-driver/pyproject.toml
+++ b/supy-driver/pyproject.toml
@@ -17,7 +17,7 @@ build-verbosity = 1
 [tool.cibuildwheel.linux]
 # Install system library
 before-all = [
-    ""yum install -y glibc-static",
+    "yum install -y glibc-static",
     "make suews",
 ]
 archs = ["auto64"]
