--- a/supy-driver/pyproject.toml
+++ b/supy-driver/pyproject.toml
@@ -1,10 +1,11 @@
 [build-system]
 requires = [
     "wheel",
-    "setuptools",
+    "setuptools<60",
     "oldest-supported-numpy",
     "setuptools-git-versioning",
 ]
+build-backend = "setuptools.build_meta"
 
 
 [tool.setuptools-git-versioning]
@@ -17,11 +18,11 @@ dirty_template = "{tag}.post{ccount}+dirty"
 [tool.cibuildwheel]
 # skip 32-bit and pypy builds
 skip = ["*-win32", "*-manylinux_i686", "pp*", '*-musllinux*']
-
+# build-frontend = "pip"
 before-build = ["git describe --tags --always --dirty"]
 
 # Increase pip debugging output
-build-verbosity = 1
+build-verbosity = 0
 
 
 [tool.cibuildwheel.linux]
@@ -39,4 +40,10 @@ archs = ["x86_64", "arm64"]
 
 [tool.cibuildwheel.windows]
 before-all = ["make suews"]
+before-build = [
+    "cd {package}",
+    "python -m pip install numpy",
+    "python build-win-def.py",
+]
 archs = ["auto64"]
+# environment = { CC='i686-w64-mingw32-gcc',FC='i686-w64-mingw32-gfortran' }
