fix macos build

--- a/supy-driver/pyproject.toml
+++ b/supy-driver/pyproject.toml
@@ -37,7 +37,7 @@ before-all = [
     "make suews",
 ]
 archs = ["x86_64", "arm64"]
-skip = ['cp311-macosx*']
+skip = ['cp311-macosx*','pp*']
 
 
 [tool.cibuildwheel.windows]
