--- a/.github/workflows/build-SUEWS.yml
+++ b/.github/workflows/build-SUEWS.yml
@@ -178,6 +178,7 @@ jobs:
 
         - uses: actions/upload-artifact@v3
           with:
+            name: python-package-distributions
             path: ./wheelhouse/*.whl
 
 
@@ -190,7 +191,7 @@ jobs:
 
     steps:
       - name: Download all the dists
-        uses: actions/download-artifact@v2
+        uses: actions/download-artifact@v3
         with:
           name: python-package-distributions
           path: dist/
