--- a/.github/workflows/build-SUEWS.yml
+++ b/.github/workflows/build-SUEWS.yml
@@ -157,21 +157,17 @@ jobs:
             git describe --tags --always --dirty
             git status
 
+        # - name: Build wheels
+        #   run: pipx run cibuildwheel==2.9.0 --output-dir wheelhouse --config-file ./supy-driver/pyproject.toml ./supy-driver
+
         - name: Build wheels
-          run: pipx run cibuildwheel==2.9.0 --output-dir wheelhouse --config-file ./supy-driver/pyproject.toml ./supy-driver
-
-  #       # - name: Install cibuildwheel
-  #       #   run: python -m pip install cibuildwheel==2.9.0
-
-  #       # - name: Build wheels
-  #       #   run: python -m cibuildwheel --output-dir wheelhouse --config-file ./supy-driver/pyproject.toml
-  #         # uses: pypa/cibuildwheel@v2.9.0
-  #         # env:
-  #         #   SETUPTOOLS_ENABLE_FEATURES: legacy-editable
-  #         # with:
-  #         #   package-dir: .
-  #         #   output-dir: wheelhouse
-  #         #   config-file: ./supy-driver/pyproject.toml
+          uses: pypa/cibuildwheel@v2.9.0
+          env:
+            # SETUPTOOLS_ENABLE_FEATURES: legacy-editable
+          with:
+            package-dir: ./supy-driver
+            output-dir: wheelhouse
+            config-file: ./supy-driver/pyproject.toml
 
         - name: check git
           run: |
