--- a/.github/workflows/build-SUEWS.yml
+++ b/.github/workflows/build-SUEWS.yml
@@ -162,7 +162,7 @@ jobs:
 
         - name: Build wheels
           uses: pypa/cibuildwheel@v2.9.0
-          env:
+          # env:
             # SETUPTOOLS_ENABLE_FEATURES: legacy-editable
           with:
             package-dir: ./supy-driver
