--- a/supy-driver/pyproject.toml
+++ b/supy-driver/pyproject.toml
@@ -11,7 +11,7 @@ requires = [
 
 [tool.setuptools-git-versioning]
 enabled = true
-template = "2022.{tag}"
+template = "{tag}"
 dev_template = "{tag}.post{ccount}"
 # ignore "dirty" flag when building using CI
 dirty_template = "{tag}.post{ccount}"
