--- a/.github/workflows/publish-to-test-pypi.yml
+++ b/.github/workflows/publish-to-test-pypi.yml
@@ -23,6 +23,7 @@ jobs:
 
     - name: Install pypa/build
       run: |
+        git describe --always --dirty
         pip install pandas wheel pytest tables
         make test
         make wheel
