--- a/.github/workflows/publish-to-test-pypi.yml
+++ b/.github/workflows/publish-to-test-pypi.yml
@@ -25,7 +25,7 @@ jobs:
       run: |
         git describe --always --dirty
         pip install pandas wheel pytest tables
-        make test
+        # make test
         make wheel
 
     - name: Publish distribution 📦 to Test PyPI
