--- a/.github/workflows/publish-to-test-pypi.yml
+++ b/.github/workflows/publish-to-test-pypi.yml
@@ -22,6 +22,7 @@ jobs:
     #   uses: lhotari/action-upterm@v1
     - name: check git info
       run: |
+        git tag -l
         git describe --always --dirty
 
     - name: Install pypa/build
