--- a/.github/workflows/publish-to-test-pypi.yml
+++ b/.github/workflows/publish-to-test-pypi.yml
@@ -27,7 +27,7 @@ jobs:
 
     - name: Install pypa/build
       run: |
-        pip install pandas wheel pytest tables
+        pip install pandas wheel pytest tables build
         # make test
         make wheel
 
