--- a/.github/workflows/publish-to-test-pypi.yml
+++ b/.github/workflows/publish-to-test-pypi.yml
@@ -34,7 +34,7 @@ jobs:
     - name: Publish distribution 📦 to Test PyPI
       uses: pypa/gh-action-pypi-publish@master
       with:
-        packages_dir: src/dist
+        packages_dir: wheelhouse
         verbose: true
         skip_existing: true
         password: ${{ secrets.TEST_PYPI_API_TOKEN }}
@@ -44,7 +44,7 @@ jobs:
       if: startsWith(github.ref, 'refs/tags')
       uses: pypa/gh-action-pypi-publish@master
       with:
-        packages_dir: src/dist
+        packages_dir: wheelhouse
         verbose: true
         skip_existing: true
         password: ${{ secrets.PYPI_API_TOKEN }}
