renaming of makefile recipe for local testing

--- a/supy-driver/Makefile
+++ b/supy-driver/Makefile
@@ -96,5 +96,5 @@ upload:
 	# $(shell twinup wheelhouse/*whl)
 
 # only local testing on mac
-cibuid:
+local:
 	pipx run cibuildwheel==2.9.0 --platform macos --config-file pyproject-localtest.toml
