use `importlib` to load data files Fixes #81

--- a/src/pyproject.toml
+++ b/src/pyproject.toml
@@ -23,6 +23,11 @@ requires-python = ">3.9"
 # # ignore "dirty" flag when building using CI for windows: seems to be a bug in the versioning tool
 # dirty_template = "{tag}"
 # version_callback = "setup:get_version"
+[tool.setuptools.packages.find]
+where = ["src"]
+
+[tool.setuptools.package-data]
+mypkg = ["*.txt", "*.json"]
 
 [tool.distutils.bdist_wheel]
 universal = true
@@ -30,6 +35,7 @@ universal = true
 [tool.setuptools_scm]
 write_to = "src/supy/_version_scm.py"
 root = ".."
+
 
 # [tool.cibuildwheel]
 # # skip 32-bit and pypy builds
