--- a/docs/requirements.txt
+++ b/docs/requirements.txt
@@ -1,11 +1,11 @@
+Sphinx==6.1.3
 numpy>=1.15.4
 nbsphinx>=0.8.6
 nbconvert>=5.4.1
 nbformat>=4.4.0
 docutils>=0.14
-Sphinx>=6
 sphinx-autobuild>=0.7.1
-sphinx-rtd-theme>=0.4.2
+sphinx-rtd-theme>=1.2
 sphinxcontrib-websupport>=1.1.0
 sphinx-comments
 sphinx-click
