--- a/.readthedocs.yml
+++ b/.readthedocs.yml
@@ -4,19 +4,16 @@
 version: 2
 
 build:
-  image: latest
-
+  os: ubuntu-20.04
+  tools:
+    # nodejs: "10"
+    python: '3.11'
 python:
-   version: '3.8'
-   install:
-      - requirements: docs/requirements.txt
-      - method: pip
-        path: src
-      #   extra_requirements:
-      #       - docs
-      # - method: setuptools
-      #   path: src
-   system_packages: true
+  install:
+    - requirements: docs/requirements.txt
+    - method: pip
+      path: src
+      system_packages: true
 
 formats:
   - epub
