--- a/.readthedocs.yml
+++ b/.readthedocs.yml
@@ -1,10 +1,17 @@
-# .readthedocs.yml
+# .readthedocs.yaml
+# Read the Docs configuration file
+# See https://docs.readthedocs.io/en/stable/config-file/v2.html for details
 
 # Required
 version: 2
 
 build:
-  image: latest
+  os: ubuntu-22.04
+  tools:
+    python: "3.11"
+
+conda:
+  environment: docs/env.yml
 
 # Build documentation in the docs/ directory with Sphinx
 sphinx:
@@ -17,8 +24,8 @@ sphinx:
 # Optionally build your docs in additional formats such as PDF and ePub
 formats: all
 
+
 # Optionally set the version of Python and requirements required to build your docs
-python:
-  version: 3.8
-  install:
-    - requirements: docs/requirements.txt
+# python:
+#   install:
+#     - requirements: docs/requirements.txt
