--- a/docs/env.yml
+++ b/docs/env.yml
@@ -1,9 +1,42 @@
+# this is the conda/mamba environment file
+# it is used by readthedocs to build the docs
+
 name: suews-docs
 channels:
   - conda-forge
 dependencies:
-  - python=3.8
+  - python=3.11
   - pip
   - black
+  - sphinx
+  - pybtex
+  - f90nml
+  - pandas
+  - numpy
+  - nbsphinx
+  # - exhale
+  - recommonmark
+  - docutils < 0.17
+  - jinja2<3.1
+  - sphinx-autobuild
+  - doxygen
+  - pip
   - pip:
-    - -r requirements.txt
+    - sphinxcontrib_programoutput
+    - sphinxcontrib.bibtex~=2.4
+    - sphinx_comments
+    - sphinx_rtd_theme
+    - sphinx-book-theme
+    - sphinx-panels
+    - sphinxcontrib.email
+    - sphinx-last-updated-by-git
+    - sphinx_rtd_theme>=0.5
+
+
+
+
+
+
+
+
+
