--- a/.readthedocs.yml
+++ b/.readthedocs.yml
@@ -7,8 +7,8 @@ version: 2
 
 build:
   os: ubuntu-22.04
-  # tools:
-    # python: "3.11"
+  tools:
+    python: "3.11"
 
 conda:
   environment: docs/env.yml
