--- a/.readthedocs.yml
+++ b/.readthedocs.yml
@@ -8,10 +8,10 @@ version: 2
 build:
   os: ubuntu-22.04
   tools:
-    python: "3.11"
+    python: "mambaforge-4.10"
 
-# conda:
-#   environment: docs/env.yml
+conda:
+  environment: docs/env.yml
 
 # Build documentation in the docs/ directory with Sphinx
 sphinx:
