update env file

--- a/env.yml
+++ b/env.yml
@@ -2,7 +2,7 @@ name: suews-dev
 channels:
   - conda-forge
 dependencies:
-  - python=3.9
+  - python=3.10
   - geopandas
   - geoplot
   - pandas
@@ -27,6 +27,17 @@ dependencies:
   - fprettify
   - fortls
   - salem
+  - matplotlib
+  - seaborn
+  - scipy
+  - jupyter
+  - scikit-learn
+  - click
+  - f90nml
+  - dask[complete]
+  - lmfit
+  - pytest
+  - floweaver
   - pip
   - pip:
-    - -r docs/requirements.txt
+    - atmosp
