--- a/.github/workflows/publish-to-test-pypi.yml
+++ b/.github/workflows/publish-to-test-pypi.yml
@@ -27,11 +27,20 @@ jobs:
         git status
         git describe --tags --dirty --match "2[0-9]*"
 
-    - name: test and build
-      run: |
-        pip install pandas wheel pytest tables build
-        make test
-        make wheel
+    # - name: test and build
+    #   run: |
+    #     pip install pandas wheel pytest tables build
+    #     make test
+    #     make wheel
+
+    - name: Build wheels
+      uses: pypa/cibuildwheel@v2.9.0
+      # env:
+        # SETUPTOOLS_ENABLE_FEATURES: legacy-editable
+      with:
+        package-dir: ./supy
+        output-dir: wheelhouse
+        config-file: ./supy/pyproject.toml
 
     - name: Publish distribution 📦 to Test PyPI
       uses: pypa/gh-action-pypi-publish@master
