--- a/src/supy/pyproject.toml
+++ b/src/supy/pyproject.toml
@@ -48,6 +48,7 @@ before-build = ["git describe --tags --always --dirty"]
 build-verbosity = 0
 
 test-requires = "pytest"
+before-test = ["cd {package}", "ll .", "cd supy", "ll .", "cd test", "ll ."]
 test-command = "pytest -s `{package}/supy/test`"
 
 
