--- a/src/supy/pyproject.toml
+++ b/src/supy/pyproject.toml
@@ -48,7 +48,13 @@ before-build = ["git describe --tags --always --dirty"]
 build-verbosity = 0
 
 test-requires = "pytest"
-before-test = ["cd {package}", "ll .", "cd supy", "ll .", "cd test", "ll ."]
+before-test = ["cd {package}",
+"ls -l .",
+"cd supy",
+"ls -l .",
+"cd test",
+"ls -l .",
+]
 test-command = "pytest -s `{package}/supy/test`"
 
 
