--- a/.github/workflows/publish-to-test-pypi.yml
+++ b/.github/workflows/publish-to-test-pypi.yml
@@ -35,8 +35,8 @@ jobs:
 
     - name: Build wheels
       uses: pypa/cibuildwheel@v2.9.0
-      # env:
-        # SETUPTOOLS_ENABLE_FEATURES: legacy-editable
+      env:
+        SETUPTOOLS_USE_DISTUTILS: stdlib
       with:
         package-dir: ./src/supy
         output-dir: wheelhouse
