--- a/.github/workflows/publish-to-test-pypi.yml
+++ b/.github/workflows/publish-to-test-pypi.yml
@@ -16,10 +16,10 @@ jobs:
       with:
         fetch-depth: 0
 
-    - name: Set up Python
-      uses: actions/setup-python@v1
-      with:
-        python-version: '3.10'
+    # - name: Set up Python
+    #   uses: actions/setup-python@v1
+    #   with:
+    #     python-version: '3.10'
 
     # # remote debugging
     # - name: Setup upterm session
@@ -66,25 +66,6 @@ jobs:
         with:
           name: python-package-distributions
           path: dist/
-
-      # - name: Publish distribution 📦 to Test PyPI
-      #   uses: pypa/gh-action-pypi-publish@master
-      #   with:
-      #     packages_dir: wheelhouse
-      #     verbose: true
-      #     skip_existing: true
-      #     password: ${{ secrets.TEST_PYPI_API_TOKEN }}
-      #     repository_url: https://test.pypi.org/legacy/
-
-      # - name: Publish distribution 📦 to PyPI
-      #   if: startsWith(github.ref, 'refs/tags')
-      #   uses: pypa/gh-action-pypi-publish@master
-      #   with:
-      #     packages_dir: wheelhouse
-      #     verbose: true
-      #     skip_existing: true
-      #     password: ${{ secrets.PYPI_API_TOKEN }}
-
 
       - name: Publish distribution 📦 to Test PyPI
         uses: pypa/gh-action-pypi-publish@release/v1.5
