--- a/src/supy/pyproject.toml
+++ b/src/supy/pyproject.toml
@@ -48,12 +48,14 @@ before-build = ["git describe --tags --always --dirty"]
 build-verbosity = 0
 
 test-requires = "pytest"
-before-test = ["cd {package}",
-"ls -l .",
-"cd supy",
-"ls -l .",
-"cd test",
-"ls -l .",
+before-test = [
+    "sleep 100",
+    "cd {package}",
+    "ls -l .",
+    "cd supy",
+    "ls -l .",
+    "cd test",
+    "ls -l .",
 ]
 test-command = "pytest -s '{package}/supy/test'"
 
@@ -69,7 +71,7 @@ before-all = [
     "make suews",
 ]
 archs = ["x86_64", "arm64"]
-skip = ['cp311-macosx*', 'pp*']
+skip = ['pp*']
 
 
 [tool.cibuildwheel.windows]
