--- a/src/supy/pyproject.toml
+++ b/src/supy/pyproject.toml
@@ -49,7 +49,7 @@ build-verbosity = 0
 
 test-requires = "pytest"
 before-test = [
-    "sleep 100",
+    # "sleep 100",
     "cd {package}",
     "ls -l .",
     "cd supy",
