--- a/src/supy/pyproject.toml
+++ b/src/supy/pyproject.toml
@@ -80,5 +80,6 @@ before-build = [
     "cd {package}",
     "python -m pip install numpy",
     "python build-win-def.py",
+    "CC=gcc python setup.py build_ext --inplace",
 ]
 archs = ["auto64"]
