--- a/src/supy/pyproject.toml
+++ b/src/supy/pyproject.toml
@@ -80,7 +80,7 @@ before-build = [
     "cd {package}",
     "python -m pip install numpy",
     "python build-win-def.py",
-    "export CC=gcc",
+    "echo $env:CC",
     "python setup.py build_ext --inplace",
 ]
 archs = ["auto64"]
